# Anomalyze

./: .readthedocs.yaml  Anomalyze.py  README.md  mkdocs.yml  pyproject.toml  requirements.txt
docs/: CODE_OF_CONDUCT.md  advanced_options.md  contributing.md  examples.md  index.md  installation.md  license.md  output.md  requirements.txt  support.md  usage.md
docs/css/: extra.css
docs/development/: architecture.md
docs/js/: extra.js
